--- a/fichiers/ajax/PartieAjaxDOM.html
+++ b/fichiers/ajax/PartieAjaxDOM.html
@@ -33,6 +33,16 @@
     />
     <input name="text" type="text" id="myText1" value="Toto" />
 
+
+    <input
+      name="button4"
+      type="button"
+      id="myButton4"
+      onClick="loadSVG('exemple.svg');"
+      value="4. Charger et afficher un svg"
+    />
+    <div id="svgdiv"></div>
+
     <p>
       Remplace le texte "LES NOMS" avec le contenu du champ de saisi: <br />
       <input
