--- a/fichiers/ajax/PartieAjaxDOM.html
+++ b/fichiers/ajax/PartieAjaxDOM.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="ajaxdom.css">
   </head>
 
-  <body>
+  <body onload="populateDatalist();">
     <input
       name="button1"
       type="button"
@@ -33,7 +33,8 @@
       value="3. Affiche le nom officiel et la capitale du pays dont le code est sélectionné dans le champ de saisie."
     />
     <input name="text" type="text" list="codelist" id="myText1" value="Toto" />
-    <datalist id="codelist" onload="populateDatalist">
+
+    <datalist id="codelist">
     </datalist>
 
     <input
